ПР7 first version

--- a/src/blocks/card/__image/card__image.css
+++ b/src/blocks/card/__image/card__image.css
@@ -7,3 +7,30 @@
 .card__image:hover {
   cursor: pointer;
 }
+
+.profile__image_container {
+  inline-size: fit-content;
+  block-size: fit-content;
+  position: relative;
+  cursor: pointer;
+}
+
+.profile__image_overlay {
+  position: absolute;
+  inline-size: 120px;
+  block-size: 120px;
+  background-color: rgba(0, 0, 0, 0.8);
+  background-image: url(../../../images/edit-avatar-icon.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 26px;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.4s, opacity 0.4s;
+}
+
+.profile__image_container:hover .profile__image_overlay {
+  visibility: initial;
+  opacity: 1;
+  transition: visibility 0.4s, opacity 0.4s;
+}
