--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -10,6 +10,35 @@
   margin-bottom: 10px;
 }
 
+.popup__input:focus {
+  outline: none;
+}
+
+.popup__input:focus-visible {
+  outline: 3px solid rgba(46, 107, 191, 0.616);
+  border-radius: 1px;
+}
+
+.popup__input_type_error {
+  border-bottom: 1px solid #ff0000;
+}
+
+.popup__input-error {
+  display: block;
+  color: #f00;
+  font-size: 12px;
+  min-height: 30px;
+  margin-block-start: 5px;
+}
+
+.popup__error_visible {
+  display: block;
+}
+
+.popup__content.popup__avatar .popup__input {
+  margin-block-start: 9px;
+}
+
 .popup__input:last-of-type {
   margin-bottom: 0;
 }
